<resources>
    <string name="app_name">CreditCardExample</string>
    <string name="enter_card_balance">Enter Card Balance</string>
    <string name="intrest_paid_will_be_in">Intrest paid will be in $</string>
    <string name="months_remaining">Months Remaining</string>
    <string name="compute">Compute</string>
    <string name="clear">CLEAR</string>
    <string name="enter_minimun">Enter Minimun $</string>
    <string name="enter_yearly_rate">Enter Yearly  %</string>
    <string name="intrest_paid">Intrest Paid</string>
</resources>
